# cop-e-cat

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
cop_e_cat/: copecat.py  covariate_selection.py  requirements.txt
cop_e_cat/utils/: __init__.py  arguments.py  params.json  params.py  pipeline_config.py
cop_e_cat/utils/functions/: util_io.py  util_math.py
vignettes/dimension_reduction/: params.json  script.py
vignettes/electrolyte_repletion/: params.json  script.py
vignettes/triaging_icu_patients/: params.json  script.py
