[metadata]
name = cop_e_cat
version = 0.0.1
author = Aishwarya Mandyam, Elizabeth Yoo, and Jeff Soules
author_email = eyoo@princeton.edu
description = Preprocessor and normalizer for access to MIMIC-IV data.
url = https://github.com/bee-hive/cop-e-cat
project_urls =
    Bug Tracker = https://github.com/bee-hive/cop-e-cat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent